# LearnVulcan

./: .gitignore  CMakeLists.txt
asset-baker/: CMakeLists.txt  asset_main.cpp
assetlib/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  prefab_asset.cpp  prefab_asset.h  texture_asset.cpp  texture_asset.h
shaders/: blit.frag  default_lit.frag  default_lit.frag.spv  depth_reduce.comp  fullscreen.vert  fullscreen.vert.spv  indirect_cull.comp  indirect_cull.comp.spv  red_triangle.frag  red_triangle.vert  sparse_upload.comp  sparse_upload.comp.spv  textured_lit.frag  textured_lit.frag.spv  tri_mesh.vert  tri_mesh.vert.spv  tri_mesh_ssbo.vert  tri_mesh_ssbo_instanced.vert  tri_mesh_ssbo_instanced.vert.spv  tri_mesh_ssbo_instanced_shadowcast.vert  tri_mesh_ssbo_instanced_shadowcast.vert.spv  triangle.frag  triangle.vert
src/: CMakeLists.txt  cvar.cpp  cvar.h  logger.h  material_system.cpp  material_system.h  player_camera.cpp  player_camera.h  string_utils.h  vk_descriptor.cpp  vk_descriptor.h  vk_engine.cpp  vk_engine.h  vk_engine_scenerender.cpp  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline_builder.cpp  vk_pipeline_builder.h  vk_profiler.cpp  vk_profiler.h  vk_pushbuffer.cpp  vk_pushbuffer.h  vk_scene.cpp  vk_scene.h  vk_shader.cpp  vk_shader.h  vk_texture.cpp  vk_texture.h  vk_types.h
